[gd_scene load_steps=2 format=3 uid="uid://3w8sysbgqpel"]

[ext_resource type="Script" uid="uid://b2vqy8rbmlcxk" path="res://Resources/Scripts/PermadeathConfirmDialog.gd" id="1_pw4yx"]

[node name="PermadeathConfirmDialog" type="CanvasLayer"]
script = ExtResource("1_pw4yx")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.772549)

[node name="CenterContainer" type="CenterContainer" parent="Backdrop"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="PanelContainer" parent="Backdrop/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Backdrop/CenterContainer/BackgroundPanel"]
custom_minimum_size = Vector2(650, 450)
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Backdrop/CenterContainer/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Backdrop/CenterContainer/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(600, 40)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="WarningLabel" type="Label" parent="Backdrop/CenterContainer/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Backdrop/CenterContainer/BackgroundPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NormalButton" type="Button" parent="Backdrop/CenterContainer/BackgroundPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
text = "Casual Mode"

[node name="PermadeathButton" type="Button" parent="Backdrop/CenterContainer/BackgroundPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
text = "Permadeath Mode"
